syntax = "proto3";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (Todo);
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse);
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message Todo {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}
